--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,11 +16,12 @@ class="mdc-toolbar mdc-toolbar--fixed mdc-theme--text-primary-on-background">
 <nav class="mdc-temporary-drawer__drawer">
 <header class="mdc-temporary-drawer__header"></header>
 <nav class="mdc-temporary-drawer__content mdc-list">
-<!--<a class="mdc-list-item" routerLink="home">Home</a>
+<a class="mdc-list-item" routerLink="home">Home</a>
 <a class="mdc-list-item" routerLink="lajpat">Lajpat Nagar</a>
 <a class="mdc-list-item" routerLink="laxmi">Laxmi Nagar</a>
 <a class="mdc-list-item" routerLink="patel">Patel Nagar</a>
-<a class="mdc-list-item" routerLink="delivery">Delivery</a>-->
+<a class="mdc-list-item" routerLink="delivery">Delivery</a>
+<a class="mdc-list-item" routerLink="orders">Orders</a>
 </nav>
 </nav>
 </aside>
