--- a/src/app/product-module/product-detail/product-detail.component.html
+++ b/src/app/product-module/product-detail/product-detail.component.html
@@ -1,3 +1,23 @@
-<p>
-  product-detail works!
-</p>
+<div class="wrapper">
+    <div class="box1">
+      
+      <mat-list>
+          <mat-list-item> {{xyz.product_name}} </mat-list-item>
+          <mat-list-item> {{xyz.product_code}} </mat-list-item>
+          <mat-list-item> {{xyz.rent}} </mat-list-item>
+          <mat-list-item> {{xyz.size}} </mat-list-item>
+          <mat-list-item> {{xyz.status}} </mat-list-item>
+          <mat-list-item> {{xyz.category}} </mat-list-item>
+          <mat-list-item> {{xyz.vendor}} </mat-list-item>
+          <mat-list-item> {{xyz.location}} </mat-list-item>
+          <mat-list-item> {{xyz.procurement_cost}} </mat-list-item>
+          <mat-list-item> {{xyz.manfacturing_code}} </mat-list-item>
+          <mat-list-item> {{xyz.color}} </mat-list-item>
+          <mat-list-item> {{xyz.dop}} </mat-list-item>
+         </mat-list>
+    </div>
+    <div class="box2">
+      <img src={{xyz.imageUrl}}>
+    </div>
+    <div class="box3">Three</div>
+ </div>
