--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@ class="mdc-toolbar mdc-toolbar--fixed mdc-theme--text-primary-on-background">
 <a class="mdc-list-item" routerLink="laxmi">Laxmi Nagar</a>
 <a class="mdc-list-item" routerLink="patel">Patel Nagar</a>
 <a class="mdc-list-item" routerLink="delivery">Delivery</a>
-<a class="mdc-list-item" routerLink="orders">Orders</a>
+<a class="mdc-list-item" routerLink="products">Products</a>
 </nav>
 </nav>
 </aside>
