--- a/src/app/order-module/order-add/order-add.component.scss
+++ b/src/app/order-module/order-add/order-add.component.scss
@@ -1,6 +1,36 @@
 .example-full-width {
     width: 90%;
   }
+  .example-half-width {
+    width: 45%;
+  }
   .example-card {
     max-width: 400px;
   }
+.return-container{
+  margin-top: 2rem;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-template-rows: 1fr 2fr;
+  grid-gap: 2rem;
+  grid-template-areas:"order booking delivery"
+  "return return return";
+  @media(max-width:1024px){
+    grid-template-columns: repeat(1,1fr);
+    grid-template-rows: repeat(4,1fr);
+    grid-template-areas:"order" "booking" "delivery"
+    "return";
+  }
+}
+.order{
+  grid-area: order;
+}
+.booking{
+  grid-area: booking;
+}
+.delivery{
+  grid-area: delivery;
+}
+.return{
+  grid-area: return;
+}
